@@ -37,7 +37,6 @@ if __name__ == "__main__":
 	
 		try:
 			from PyQt4 import QtGui, QtCore
-			int("x")
 		except:
 			libopensesame.misc.messagebox("OpenSesame Run", "Incorrect or missing options.\n\nRun 'opensesame --help' from a terminal (or command prompt) to see a list of available options, or install Python Qt4 to enable the graphical user interface.")
 			quit()
