@@ -13,6 +13,7 @@
 - Added sound_sample_size and sound_channels to sound settings in openexp.experiment
 - Switched to optparse module for parsing command line arguments
 - Added opensesamerun to run experiments standalone
+- Added unicode support to sketchpads to allow for special characters
 
 0.22 "Axiomatic Axelrod"
 - Added search capabilities to inline_editor and a notification of unapplied changes
